--- a/.github/workflows/check-action-updates.yml
+++ b/.github/workflows/check-action-updates.yml
@@ -32,7 +32,7 @@ jobs:
           while read action; do
             name=$(echo "$action" | cut -d@ -f1)
             version=$(echo "$action" | cut -d@ -f2)
-            echo "| \`$name\` | \`$version\` | [View]($https://github.com/$name) |" >> $GITHUB_STEP_SUMMARY
+            echo "| \`$name\` | \`$version\` | [View](https://github.com/$name) |" >> $GITHUB_STEP_SUMMARY
           done
           
           echo "" >> $GITHUB_STEP_SUMMARY
@@ -92,38 +92,42 @@ jobs:
                   .map(action => `- \`${action}\` - [Repository](https://github.com/${action.split('@')[0]})`)
                   .join('\n');
                 
+                const issueBody = [
+                  "## Weekly GitHub Actions Update Check",
+                  "",
+                  "This issue is created automatically to remind you to check for GitHub Actions updates.",
+                  "",
+                  "### Current Actions in Use:",
+                  "",
+                  actionsList,
+                  "",
+                  "### Update Process:",
+                  "",
+                  "1. **Check each action's releases page** for newer versions",
+                  "2. **Review changelogs** for any breaking changes", 
+                  "3. **Update workflow files** with new version numbers",
+                  "4. **Test the workflows** to ensure they work correctly",
+                  "",
+                  "### Quick Links:",
+                  "",
+                  "- [GitHub Actions Marketplace](https://github.com/marketplace?type=actions)",
+                  `- [Dependabot Pull Requests](https://github.com/${context.repo.owner}/${context.repo.repo}/pulls?q=is%3Apr+is%3Aopen+author%3Aapp%2Fdependabot)`,
+                  "",
+                  "### Automation:",
+                  "",
+                  "- Dependabot is configured to automatically create PRs for action updates",
+                  "- This check runs weekly to remind about manual reviews",
+                  "",
+                  "---",
+                  "",
+                  "*This issue can be closed after reviewing and updating the actions.*"
+                ].join('\n');
+
                 await github.rest.issues.create({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   title: '🔄 GitHub Actions Update Check - ' + new Date().toISOString().split('T')[0],
-                  body: `## Weekly GitHub Actions Update Check
-                  
-This issue is created automatically to remind you to check for GitHub Actions updates.
-
-### Current Actions in Use:
-
-${actionsList}
-
-### Update Process:
-
-1. **Check each action's releases page** for newer versions
-2. **Review changelogs** for any breaking changes
-3. **Update workflow files** with new version numbers
-4. **Test the workflows** to ensure they work correctly
-
-### Quick Links:
-
-- [GitHub Actions Marketplace](https://github.com/marketplace?type=actions)
-- [Dependabot Pull Requests](https://github.com/${context.repo.owner}/${context.repo.repo}/pulls?q=is%3Apr+is%3Aopen+author%3Aapp%2Fdependabot)
-
-### Automation:
-
-- Dependabot is configured to automatically create PRs for action updates
-- This check runs weekly to remind about manual reviews
-
----
-
-*This issue can be closed after reviewing and updating the actions.*`,
+                  body: issueBody,
                   labels: ['github-actions', 'maintenance', 'automation']
                 });
                 
