--- a/.github/workflows/check-action-updates.yml
+++ b/.github/workflows/check-action-updates.yml
@@ -9,9 +9,8 @@ jobs:
   check-updates:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
+      - name: Checkout repository
+        uses: actions/checkout@v5
       - name: Check for action updates
         run: |
           echo "## GitHub Actions Version Check Report" >> $GITHUB_STEP_SUMMARY
