--- a/.github/workflows/weekly-action-reminder.yml
+++ b/.github/workflows/weekly-action-reminder.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v5
 
-      - name: Create update reminder issue
-        uses: actions/github-script@v7
+      - name: Create weekly reminder issue
+        uses: actions/github-script@v8
         with:
           script: |
             const date = new Date().toISOString().split('T')[0];
@@ -48,7 +48,7 @@ jobs:
             - \`docker/setup-buildx-action@v3\` - [Repository](https://github.com/docker/setup-buildx-action) | [Releases](https://github.com/docker/setup-buildx-action/releases)
             - \`docker/login-action@v3\` - [Repository](https://github.com/docker/login-action) | [Releases](https://github.com/docker/login-action/releases)
             - \`docker/build-push-action@v6\` - [Repository](https://github.com/docker/build-push-action) | [Releases](https://github.com/docker/build-push-action/releases)
-            - \`actions/github-script@v7\` - [Repository](https://github.com/actions/github-script) | [Releases](https://github.com/actions/github-script/releases)
+            - \`actions/github-script@v8\` - [Repository](https://github.com/actions/github-script) | [Releases](https://github.com/actions/github-script/releases)
 
             ### Update Process:
 
