--- a/.github/workflows/build_and_push_spark_images.yml
+++ b/.github/workflows/build_and_push_spark_images.yml
@@ -5,8 +5,16 @@ on:
     branches:
       - "main"
   schedule:
-    - cron: "0 7 * * *"
-  workflow_dispatch:
+    - cron: "0 7 * * *"  # Daily at 7 AM UTC
+  workflow_dispatch:  # Allow manual triggering
+
+# Action versions - Update these regularly by checking:
+# - actions/checkout: https://github.com/actions/checkout/releases
+# - docker/setup-qemu-action: https://github.com/docker/setup-qemu-action/releases  
+# - docker/setup-buildx-action: https://github.com/docker/setup-buildx-action/releases
+# - docker/login-action: https://github.com/docker/login-action/releases
+# - docker/build-push-action: https://github.com/docker/build-push-action/releases
+# - actions/github-script: https://github.com/actions/github-script/releases
 
 env:
   REGISTRY: docker.io
@@ -19,48 +27,47 @@ jobs:
       image-digest: ${{ steps.build.outputs.digest }}
       build-date: ${{ steps.date.outputs.date }}
     steps:
-      # Optional: You can add the free disk space step here too if this job ever fails
-      - name: Checkout
-        uses: actions/checkout@v6
-        
-      - name: Set build date
-        id: date
-        run: echo "date=$(date +'%d%m%Y')" >> $GITHUB_OUTPUT
-        
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          driver-opts: |
-            image=moby/buildkit:buildx-stable-1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push spark-builder
-        id: build
-        uses: docker/build-push-action@v6
-        with:
-          context: spark-builder/.
-          platforms: linux/amd64
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/spark-builder:${{ steps.date.outputs.date }}
-            ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/spark-builder:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          labels: |
-            org.opencontainers.image.title=Spark Builder
-            org.opencontainers.image.description=Apache Spark builder image with master branch
-            org.opencontainers.image.version=${{ steps.date.outputs.date }}
-            org.opencontainers.image.created=${{ steps.date.outputs.date }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.source=${{ github.repositoryUrl }}
+        - name: Checkout
+          uses: actions/checkout@v6
+          
+        - name: Set build date
+          id: date
+          run: echo "date=$(date +'%d%m%Y')" >> $GITHUB_OUTPUT
+          
+        - name: Set up QEMU
+          uses: docker/setup-qemu-action@v3
+          
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+          with:
+            driver-opts: |
+              image=moby/buildkit:buildx-stable-1
+  
+        - name: Login to DockerHub
+          uses: docker/login-action@v3
+          with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+  
+        - name: Build and push spark-builder
+          id: build
+          uses: docker/build-push-action@v6
+          with:
+            context: spark-builder/.
+            platforms: linux/amd64
+            push: true
+            tags: |
+              ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/spark-builder:${{ steps.date.outputs.date }}
+              ${{ env.REGISTRY }}/${{ env.NAMESPACE }}/spark-builder:latest
+            cache-from: type=gha
+            cache-to: type=gha,mode=max
+            labels: |
+              org.opencontainers.image.title=Spark Builder
+              org.opencontainers.image.description=Apache Spark builder image with master branch
+              org.opencontainers.image.version=${{ steps.date.outputs.date }}
+              org.opencontainers.image.created=${{ steps.date.outputs.date }}
+              org.opencontainers.image.revision=${{ github.sha }}
+              org.opencontainers.image.source=${{ github.repositoryUrl }}
 
   spark-worker-and-driver:
     needs: spark-builder
@@ -70,16 +77,17 @@ jobs:
       matrix:
         component: [worker, driver]
     steps:
+      # --- Free Disk Space Step ---
       - name: Free Disk Space (Ubuntu)
-        uses: jlumbroso/free-disk-space-action@v1.3.1
+        uses: endersonmenezes/free-disk-space@v2
         with:
-          tool-cache: false
-          android: true
-          dotnet: true
-          haskell: true
-          large-packages: true
-          docker-images: true
-          swap-storage: false
+          remove_android: true
+          remove_dotnet: true
+          remove_haskell: true
+          remove_tool_cache: true
+          remove_swap: true
+          remove_packages: "android-sdk-platform-tools"
+      # ----------------------------
 
       - name: Checkout
         uses: actions/checkout@v6
