--- a/.github/workflows/weekly-action-reminder.yml
+++ b/.github/workflows/weekly-action-reminder.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   create-reminder:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
