--- a/.github/workflows/check-action-updates.yml
+++ b/.github/workflows/check-action-updates.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   check-updates:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
