--- a/.github/workflows/update-actions.yml
+++ b/.github/workflows/update-actions.yml
@@ -11,7 +11,7 @@ permissions:
 
 jobs:
   scan-actions:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
@@ -49,7 +49,7 @@ jobs:
           echo "4. Dependabot will also create PRs automatically" >> $GITHUB_STEP_SUMMARY
 
   check-action-versions:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
